force-app/main/default/objects/Address__c/fields/Aadhar_Address__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Address__c</fullName>
    <formula>Loan_Applicant__r.Aadhaar_Verification__r.Aadhaar_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aadhar Address</label>
    <type>Text</type>
</CustomField>