force-app/main/default/objects/Address__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>