force-app/main/default/objects/Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Address</fullName>
            </value>
            <value>
                <fullName>Residence Address</fullName>
            </value>
            <value>
                <fullName>Office Address</fullName>
            </value>
            <value>
                <fullName>Branch / Regional Office</fullName>
                <isActive>false</isActive>
                <label>Branch / Regional Office</label>
            </value>
            <value>
                <fullName>Corporate Office</fullName>
                <isActive>false</isActive>
                <label>Corporate Office</label>
            </value>
            <value>
                <fullName>Not Categorized</fullName>
                <isActive>false</isActive>
                <label>Not Categorized</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Plant / Factory Address</fullName>
                <isActive>false</isActive>
                <label>Plant / Factory Address</label>
            </value>
            <value>
                <fullName>Registered Office</fullName>
                <isActive>false</isActive>
                <label>Registered Office</label>
            </value>
            <value>
                <fullName>Warehouse</fullName>
                <isActive>false</isActive>
                <label>Warehouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>