force-app/main/default/objects/Address__c/fields/BL_Accomodation_Type__c.field-meta.xml
<CustomField>
    <fullName>BL_Accomodation_Type__c</fullName>
    <label>Accomodation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Company Provided</fullName>
            </value>
            <value>
                <fullName>On Rent</fullName>
            </value>
            <value>
                <fullName>Own Flat</fullName>
            </value>
            <value>
                <fullName>Own Independent House</fullName>
            </value>
            <value>
                <fullName>Joint Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>