force-app/main/default/objects/Address__c/fields/BL_Number_of_years_at_residence__c.field-meta.xml
<CustomField>
    <fullName>BL_Number_of_years_at_residence__c</fullName>
    <label>Number of Years at Residence</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>