force-app/main/default/objects/Address__c/fields/BL_Other_Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>BL_Other_Residence_Type__c</fullName>
    <label>Other Residence Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>