force-app/main/default/objects/Address__c/fields/BL_PreferredMailingCorrespondenceAddress__c.field-meta.xml
<CustomField>
    <fullName>BL_PreferredMailingCorrespondenceAddress__c</fullName>
    <label>Preferred Mailing/Correspondence Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>