force-app/main/default/objects/Address__c/fields/BL_Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>BL_Residence_Type__c</fullName>
    <label>Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bungalow</fullName>
            </value>
            <value>
                <fullName>Row Houses</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Soceity</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>