force-app/main/default/objects/Address__c/fields/BL_Under_Residence_Status__c.field-meta.xml
<CustomField>
    <fullName>BL_Under_Residence_Status__c</fullName>
    <label>Under Residence Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>With Parents</fullName>
            </value>
            <value>
                <fullName>With Relatives</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>