force-app/main/default/objects/Address__c/fields/CIbil_State_Code__c.field-meta.xml
<CustomField>
    <fullName>CIbil_State_Code__c</fullName>
    <formula>Pincode__r.City__r.District__r.State__r.Cibil_State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIbil State Code</label>
    <type>Text</type>
</CustomField>