force-app/main/default/objects/Address__c/fields/City1__c.field-meta.xml
<CustomField>
    <fullName>City1__c</fullName>
    <label>City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>