force-app/main/default/objects/Address__c/fields/Compare_Address_with_Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Compare_Address_with_Aadhar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compare Address with Aadhar?</label>
    <type>Checkbox</type>
</CustomField>