force-app/main/default/objects/Address__c/fields/Dedupe_Address__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Address__c</fullName>
    <formula>Loan_Applicant__r.Dedupe_Verification__r.Dedupe_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dedupe Address</label>
    <type>Text</type>
</CustomField>