force-app/main/default/objects/Address__c/fields/Distance_of_Business_Premise_from_Branch__c.field-meta.xml
<CustomField>
    <fullName>Distance_of_Business_Premise_from_Branch__c</fullName>
    <label>Distance of Business Premise from Branch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>