force-app/main/default/objects/Address__c/fields/ICICI_State_Code__c.field-meta.xml
<CustomField>
    <fullName>ICICI_State_Code__c</fullName>
    <formula>Pincode__r.District__r.State__r.ICICI_State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICICI State Code</label>
    <type>Text</type>
</CustomField>