force-app/main/default/objects/Address__c/fields/Is_Communication__c.field-meta.xml
<CustomField>
    <fullName>Is_Communication__c</fullName>
    <label>Is Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>