force-app/main/default/objects/Address__c/fields/Number_of_Years_in_Same_City__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_in_Same_City__c</fullName>
    <label>Number of Years in Same City</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>