force-app/main/default/objects/Address__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other Residence Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>