force-app/main/default/objects/Address__c/fields/Premise_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Premise_Ownership__c</fullName>
    <label>Premise Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Parental</fullName>
            </value>
            <value>
                <fullName>Company Owned</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>