force-app/main/default/objects/Address__c/fields/Principal_place_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Principal_place_of_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal place of Business</label>
    <type>Checkbox</type>
</CustomField>