force-app/main/default/objects/Address__c/fields/Proof_of_Address__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Address__c</fullName>
    <label>Proof of Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>UID (Aadhaar)</fullName>
            </value>
            <value>
                <fullName>Voter Identity Card</fullName>
            </value>
            <value>
                <fullName>MNREGA Job Card</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>