force-app/main/default/objects/Address__c/fields/Proof_Of_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Proof_Of_Address_Name__c</fullName>
    <label>Proof Of Address Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>