force-app/main/default/objects/Address__c/fields/Residence_is__c.field-meta.xml
<CustomField>
    <fullName>Residence_is__c</fullName>
    <label>Accommodation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Owned</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Company Provided</fullName>
            </value>
            <value>
                <fullName>Family Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>