force-app/main/default/objects/Address__c/fields/Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>Residence_Type__c</fullName>
    <label>Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Company Provided</fullName>
            </value>
            <value>
                <fullName>On Rent</fullName>
            </value>
            <value>
                <fullName>Own Flat</fullName>
            </value>
            <value>
                <fullName>Own Independent House</fullName>
            </value>
            <value>
                <fullName>Joint Family</fullName>
            </value>
            <value>
                <fullName>Bungalow</fullName>
                <isActive>false</isActive>
                <label>Bungalow</label>
            </value>
            <value>
                <fullName>Flat</fullName>
                <isActive>false</isActive>
                <label>Flat</label>
            </value>
            <value>
                <fullName>Row Houses</fullName>
                <isActive>false</isActive>
                <label>Row Houses</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>