force-app/main/default/objects/Address__c/fields/Sector_Localty__c.field-meta.xml
<CustomField>
    <fullName>Sector_Localty__c</fullName>
    <label>Sector/Localty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>