force-app/main/default/objects/Address__c/fields/Sherlock_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Sherlock_State_Code__c</fullName>
    <formula>Pincode__r.City__r.District__r.State__r.Sherlock_State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sherlock State Code</label>
    <type>Text</type>
</CustomField>