force-app/main/default/objects/Address__c/validationRules/BL_AddressTypeRestrictionNonIndividual.validationRule-meta.xml
<ValidationRule>
    <fullName>BL_AddressTypeRestrictionNonIndividual</fullName>
    <active>false</active>
    <description>Address Type should be Office only is case for Non Individual Users.</description>
    <errorConditionFormula>AND(Loan_Applicant__r.RecordType.Name == &apos;BL Non Individual&apos;, NOT( ISPICKVAL(Address_Type__c, &apos;Office Address&apos;)),NOT($Setup.Bypass_Validations__c.Bypass_Validation__c))</errorConditionFormula>
    <errorMessage>Kindly select the address type as an office address for non-individual applicants.</errorMessage>
</ValidationRule>