force-app/main/default/objects/Address__c/validationRules/Compare_Aadhar.validationRule-meta.xml
<ValidationRule>
    <fullName>Compare_Aadhar</fullName>
    <active>true</active>
    <description>Compare aadhar cannot be change for permanent address.</description>
    <errorConditionFormula>IF( AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),ISPickVal(Address_Type__c,&apos;Permanent Address&apos;), 
									ISCHANGED(Compare_Address_with_Aadhar__c)) , 
				true, false)</errorConditionFormula>
    <errorDisplayField>Compare_Address_with_Aadhar__c</errorDisplayField>
    <errorMessage>Compare address cannot be changed for a permanent address.</errorMessage>
</ValidationRule>