force-app/main/default/objects/Address__c/validationRules/Is_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK( Loan_Applicant__c ), Lead__r.IsReadOnly__c,  Loan_Applicant__r.Loan_Application__r.IsReadOnly__c )</errorConditionFormula>
    <errorMessage>You don&apos;t have access to edit the application.</errorMessage>
</ValidationRule>